client: fix #2: prevent card overflow

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -43,6 +43,7 @@ html, body {
   position: absolute;
   z-index: 3;
   background: white;
+  overflow-y: scroll;
 }
 
 #card-container.tresdb-card-full {
